--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,16 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(12503, 9)"
+       "(12503, 11)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -67,6 +67,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0.3</th>\n",
+       "      <th>Unnamed: 0.2</th>\n",
+       "      <th>Unnamed: 0.1</th>\n",
        "      <th>Unnamed: 0</th>\n",
        "      <th>id</th>\n",
        "      <th>pov</th>\n",
@@ -74,7 +77,6 @@
        "      <th>score</th>\n",
        "      <th>author</th>\n",
        "      <th>num_comments</th>\n",
-       "      <th>url</th>\n",
        "      <th>created_utc</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -82,17 +84,22 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>ym9vw8</td>\n",
        "      <td>UA</td>\n",
        "      <td>NYT Kherson braces for battle as RF administra...</td>\n",
        "      <td>1</td>\n",
        "      <td>MardukSyria</td>\n",
        "      <td>0</td>\n",
-       "      <td>https://www.nytimes.com/2022/11/03/world/europ...</td>\n",
        "      <td>1667594654</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>ym9t1i</td>\n",
        "      <td>RU</td>\n",
@@ -100,11 +107,13 @@
        "      <td>1</td>\n",
        "      <td>Quitetheninja</td>\n",
        "      <td>1</td>\n",
-       "      <td>https://www.msn.com/en-CA/news/world/russias-w...</td>\n",
        "      <td>1667594459</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>ym9qej</td>\n",
        "      <td>RU</td>\n",
@@ -112,11 +121,13 @@
        "      <td>1</td>\n",
        "      <td>Quitetheninja</td>\n",
        "      <td>0</td>\n",
-       "      <td>https://inews.co.uk/news/world/russia-wagner-g...</td>\n",
        "      <td>1667594289</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>ym9i5s</td>\n",
        "      <td>UA</td>\n",
@@ -124,11 +135,13 @@
        "      <td>1</td>\n",
        "      <td>9ND79</td>\n",
        "      <td>0</td>\n",
-       "      <td>https://v.redd.it/ew9eb2bqkxx91</td>\n",
        "      <td>1667593756</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>ym96n2</td>\n",
        "      <td>UA</td>\n",
@@ -136,7 +149,6 @@
        "      <td>1</td>\n",
        "      <td>TheHunter920</td>\n",
        "      <td>0</td>\n",
-       "      <td>https://twitter.com/jacklosh/status/1588543987...</td>\n",
        "      <td>1667593002</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -144,29 +156,29 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0      id pov                                              title  \\\n",
-       "0           0  ym9vw8  UA  NYT Kherson braces for battle as RF administra...   \n",
-       "1           1  ym9t1i  RU  Russia’s Wagner Group commanders cut off convi...   \n",
-       "2           2  ym9qej  RU  Convict recruits are tortured and executed in ...   \n",
-       "3           3  ym9i5s  UA                                love me some himars   \n",
-       "4           4  ym96n2  UA  3 Ukrainian jets Allegedly MiG29 flying Eastwa...   \n",
+       "   Unnamed: 0.3  Unnamed: 0.2  Unnamed: 0.1  Unnamed: 0      id pov  \\\n",
+       "0             0             0             0           0  ym9vw8  UA   \n",
+       "1             1             1             1           1  ym9t1i  RU   \n",
+       "2             2             2             2           2  ym9qej  RU   \n",
+       "3             3             3             3           3  ym9i5s  UA   \n",
+       "4             4             4             4           4  ym96n2  UA   \n",
        "\n",
-       "   score         author  num_comments  \\\n",
-       "0      1    MardukSyria             0   \n",
-       "1      1  Quitetheninja             1   \n",
-       "2      1  Quitetheninja             0   \n",
-       "3      1          9ND79             0   \n",
-       "4      1   TheHunter920             0   \n",
+       "                                               title  score         author  \\\n",
+       "0  NYT Kherson braces for battle as RF administra...      1    MardukSyria   \n",
+       "1  Russia’s Wagner Group commanders cut off convi...      1  Quitetheninja   \n",
+       "2  Convict recruits are tortured and executed in ...      1  Quitetheninja   \n",
+       "3                                love me some himars      1          9ND79   \n",
+       "4  3 Ukrainian jets Allegedly MiG29 flying Eastwa...      1   TheHunter920   \n",
        "\n",
-       "                                                 url  created_utc  \n",
-       "0  https://www.nytimes.com/2022/11/03/world/europ...   1667594654  \n",
-       "1  https://www.msn.com/en-CA/news/world/russias-w...   1667594459  \n",
-       "2  https://inews.co.uk/news/world/russia-wagner-g...   1667594289  \n",
-       "3                    https://v.redd.it/ew9eb2bqkxx91   1667593756  \n",
-       "4  https://twitter.com/jacklosh/status/1588543987...   1667593002  "
+       "   num_comments  created_utc  \n",
+       "0             0   1667594654  \n",
+       "1             1   1667594459  \n",
+       "2             0   1667594289  \n",
+       "3             0   1667593756  \n",
+       "4             0   1667593002  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -201,6 +213,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0.3</th>\n",
+       "      <th>Unnamed: 0.2</th>\n",
+       "      <th>Unnamed: 0.1</th>\n",
        "      <th>Unnamed: 0</th>\n",
        "      <th>id</th>\n",
        "      <th>pov</th>\n",
@@ -208,7 +223,6 @@
        "      <th>score</th>\n",
        "      <th>author</th>\n",
        "      <th>num_comments</th>\n",
-       "      <th>url</th>\n",
        "      <th>created_utc</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -216,17 +230,22 @@
        "    <tr>\n",
        "      <th>12492</th>\n",
        "      <td>12492</td>\n",
+       "      <td>12492</td>\n",
+       "      <td>12492</td>\n",
+       "      <td>12492</td>\n",
        "      <td>tic2c5</td>\n",
        "      <td>NONE</td>\n",
        "      <td>NaN</td>\n",
        "      <td>3</td>\n",
        "      <td>YungChaky</td>\n",
        "      <td>0</td>\n",
-       "      <td>https://i.redd.it/y5bnskrxigo81.jpg</td>\n",
        "      <td>1647746558</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12494</th>\n",
+       "      <td>12494</td>\n",
+       "      <td>12494</td>\n",
+       "      <td>12494</td>\n",
        "      <td>12494</td>\n",
        "      <td>tic08e</td>\n",
        "      <td>NONE</td>\n",
@@ -234,11 +253,13 @@
        "      <td>1</td>\n",
        "      <td>YungChaky</td>\n",
        "      <td>0</td>\n",
-       "      <td>https://v.redd.it/erha013aigo81</td>\n",
        "      <td>1647746349</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12502</th>\n",
+       "      <td>12502</td>\n",
+       "      <td>12502</td>\n",
+       "      <td>12502</td>\n",
        "      <td>12502</td>\n",
        "      <td>tiaqd1</td>\n",
        "      <td>NONE</td>\n",
@@ -246,7 +267,6 @@
        "      <td>1</td>\n",
        "      <td>[deleted]</td>\n",
        "      <td>0</td>\n",
-       "      <td>https://www.reddit.com/r/UkraineRussiaReport/c...</td>\n",
        "      <td>1647741962</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -254,18 +274,18 @@
        "</div>"
       ],
       "text/plain": [
-       "       Unnamed: 0      id   pov title  score     author  num_comments  \\\n",
-       "12492       12492  tic2c5  NONE   NaN      3  YungChaky             0   \n",
-       "12494       12494  tic08e  NONE   NaN      1  YungChaky             0   \n",
-       "12502       12502  tiaqd1  NONE   NaN      1  [deleted]             0   \n",
+       "       Unnamed: 0.3  Unnamed: 0.2  Unnamed: 0.1  Unnamed: 0      id   pov  \\\n",
+       "12492         12492         12492         12492       12492  tic2c5  NONE   \n",
+       "12494         12494         12494         12494       12494  tic08e  NONE   \n",
+       "12502         12502         12502         12502       12502  tiaqd1  NONE   \n",
        "\n",
-       "                                                     url  created_utc  \n",
-       "12492                https://i.redd.it/y5bnskrxigo81.jpg   1647746558  \n",
-       "12494                    https://v.redd.it/erha013aigo81   1647746349  \n",
-       "12502  https://www.reddit.com/r/UkraineRussiaReport/c...   1647741962  "
+       "      title  score     author  num_comments  created_utc  \n",
+       "12492   NaN      3  YungChaky             0   1647746558  \n",
+       "12494   NaN      1  YungChaky             0   1647746349  \n",
+       "12502   NaN      1  [deleted]             0   1647741962  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +308,7 @@
        "Name: pov, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,28 +319,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>pov</th>\n",
+       "      <th>title</th>\n",
+       "      <th>score</th>\n",
+       "      <th>author</th>\n",
+       "      <th>num_comments</th>\n",
+       "      <th>created_utc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ym9vw8</td>\n",
+       "      <td>UA</td>\n",
+       "      <td>NYT Kherson braces for battle as RF administra...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>MardukSyria</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1667594654</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ym9t1i</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>Russia’s Wagner Group commanders cut off convi...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Quitetheninja</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1667594459</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ym9qej</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>Convict recruits are tortured and executed in ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Quitetheninja</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1667594289</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ym9i5s</td>\n",
+       "      <td>UA</td>\n",
+       "      <td>love me some himars</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9ND79</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1667593756</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ym96n2</td>\n",
+       "      <td>UA</td>\n",
+       "      <td>3 Ukrainian jets Allegedly MiG29 flying Eastwa...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>TheHunter920</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1667593002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12498</th>\n",
+       "      <td>tibu9f</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>Kharkov</td>\n",
+       "      <td>4</td>\n",
+       "      <td>YungChaky</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1647745747</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12499</th>\n",
+       "      <td>tibre4</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>Geotag on photos and video and how to take the...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>YungChaky</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1647745467</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12500</th>\n",
+       "      <td>tibfg3</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>update, useful links, more</td>\n",
+       "      <td>5</td>\n",
+       "      <td>YungChaky</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1647744331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12501</th>\n",
+       "      <td>tiassk</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>rUkraineWarVideoReport  Sub in work in progress</td>\n",
+       "      <td>5</td>\n",
+       "      <td>YungChaky</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1647742182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12502</th>\n",
+       "      <td>tiaqd1</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[deleted]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1647741962</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12503 rows × 7 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Series([], Name: pov, dtype: int64)"
+       "           id   pov                                              title  score  \\\n",
+       "0      ym9vw8    UA  NYT Kherson braces for battle as RF administra...      1   \n",
+       "1      ym9t1i    RU  Russia’s Wagner Group commanders cut off convi...      1   \n",
+       "2      ym9qej    RU  Convict recruits are tortured and executed in ...      1   \n",
+       "3      ym9i5s    UA                                love me some himars      1   \n",
+       "4      ym96n2    UA  3 Ukrainian jets Allegedly MiG29 flying Eastwa...      1   \n",
+       "...       ...   ...                                                ...    ...   \n",
+       "12498  tibu9f  NONE                                            Kharkov      4   \n",
+       "12499  tibre4  NONE  Geotag on photos and video and how to take the...      2   \n",
+       "12500  tibfg3  NONE                         update, useful links, more      5   \n",
+       "12501  tiassk  NONE    rUkraineWarVideoReport  Sub in work in progress      5   \n",
+       "12502  tiaqd1  NONE                                                NaN      1   \n",
+       "\n",
+       "              author  num_comments  created_utc  \n",
+       "0        MardukSyria             0   1667594654  \n",
+       "1      Quitetheninja             1   1667594459  \n",
+       "2      Quitetheninja             0   1667594289  \n",
+       "3              9ND79             0   1667593756  \n",
+       "4       TheHunter920             0   1667593002  \n",
+       "...              ...           ...          ...  \n",
+       "12498      YungChaky             0   1647745747  \n",
+       "12499      YungChaky             0   1647745467  \n",
+       "12500      YungChaky             0   1647744331  \n",
+       "12501      YungChaky             9   1647742182  \n",
+       "12502      [deleted]             0   1647741962  \n",
+       "\n",
+       "[12503 rows x 7 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ukraine_povs = [\"UKRAINE\", \"UC\", \"UKR\", \"UAPOV\", \"UKRAINIAN\", \"UA.POV\", \"UAPOV.\", \"UA.POV.\"]\n",
-    "russian_povs = [\"RUSSIAN\", \"RUPOV\", \"RUS\", \"RUSSIA\"]\n",
+    "# ukraine_povs = [\"UKRAINE\", \"UC\", \"UKR\", \"UAPOV\", \"UKRAINIAN\", \"UA.POV\", \"UAPOV.\", \"UA.POV.\"]\n",
+    "# russian_povs = [\"RUSSIAN\", \"RUPOV\", \"RUS\", \"RUSSIA\"]\n",
     "\n",
-    "df.loc[ df[\"pov\"].isin(ukraine_povs), \"pov\"] = \"UA\"\n",
-    "df.loc[ df[\"pov\"].isin(russian_povs), \"pov\"] = \"RU\"\n",
-    "df.loc[ ~df[\"pov\"].isin([\"UA\", \"RU\"]), \"pov\"] = \"NONE\"\n",
+    "# df.loc[ df[\"pov\"].isin(ukraine_povs), \"pov\"] = \"UA\"\n",
+    "# df.loc[ df[\"pov\"].isin(russian_povs), \"pov\"] = \"RU\"\n",
+    "# df.loc[ ~df[\"pov\"].isin([\"UA\", \"RU\"]), \"pov\"] = \"NONE\"\n",
     "\n",
+    "df[\"title\"] = df[\"title\"].str.strip(\" \\t\\n|,.\\\"\\':;\")\n",
+    "\n",
+    "df = df.iloc[: , 4:]\n",
+    "\n",
+    "df\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "UA      6618\n",
+       "RU      5601\n",
+       "NONE     284\n",
+       "Name: pov, dtype: int64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "df.to_csv(\"parsed_data.csv\")\n",
     "df[\"pov\"].value_counts()"
    ]
